PoC用のAPI初版作成
